---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2019.12.27
  Features:
    - Added option to make the GUI appear in the center of the screen
  Changes:
    - Significant optimisations to translation library
    - The GUI will not open until dictionary translation is finished
    - The cursor is now cleaned before items or ghosts are placed in it
  Bugfixes:
    - Fixed a crash on inventory change when requesting more than one item from the logistics network at once
    - Fixed not being able to use the mouse to pick a result until after pressing enter
    - Fixed several incorrectly handled edge cases with the GUI navigation

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2019.12.23
  Bugfixes:
    - ACTUALLY fixed a crash when an item has no localised name
    - Fixed missing controls locale

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2019.12.23
  Bugfixes:
    - Fixed a crash when an item has no localised name

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2019.12.23
  Features:
    - Initial release