@@ -10,37 +10,44 @@ data:extend{
   {
     type = 'custom-input',
     name = 'qis-search',
-    key_sequence = 'CONTROL + F'
+    key_sequence = 'CONTROL + F',
+    order = 'a'
   },
   {
     type = 'custom-input',
     name = 'qis-nav-up',
-    key_sequence = 'UP'
-  },
-  {
-    type = 'custom-input',
-    name = 'qis-nav-left',
-    key_sequence = 'LEFT'
+    key_sequence = 'UP',
+    order = 'ba'
   },
   {
     type = 'custom-input',
     name = 'qis-nav-down',
-    key_sequence = 'DOWN'
+    key_sequence = 'DOWN',
+    order = 'bb'
+  },
+  {
+    type = 'custom-input',
+    name = 'qis-nav-left',
+    key_sequence = 'LEFT',
+    order = 'bc'
   },
   {
     type = 'custom-input',
     name = 'qis-nav-right',
-    key_sequence = 'RIGHT'
+    key_sequence = 'RIGHT',
+    order = 'bd'
   },
   {
     type = 'custom-input',
     name = 'qis-nav-confirm',
-    key_sequence = 'ENTER'
+    key_sequence = 'ENTER',
+    order = 'be'
   },
   {
     type = 'custom-input',
     name = 'qis-nav-alt-confirm',
-    key_sequence = 'SHIFT + ENTER'
+    key_sequence = 'SHIFT + ENTER',
+    order = 'bf'
   }
 }
 
