@@ -6,6 +6,12 @@ checkbox-crafting-label=Crafting
 
 [controls]
 qis-search=Open search GUI
+qis-nav-up=Navigate up
+qis-nav-down=Navigate down
+qis-nav-left=Navigate left
+qis-nav-right=Navigate right
+qis-nav-confirm=Confirm item selection
+qis-nav-alt-confirm=Confirm item selection (alternate)
 
 [mod-setting-name]
 qis-search-inventory=Search in inventory
